--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steemconnect",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,10 +24,7 @@
   },
   "homepage": "https://github.com/adcpm/steemconnect#readme",
   "dependencies": {
-    "bigi": "^1.4.2",
-    "bs58": "^3.0.0",
-    "crypto": "0.0.3",
-    "ecurve": "^1.0.3"
+    "axios": "^0.13.1"
   },
   "contributors": [
     "Fabien (https://github.com/adcpm)"
