--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steemconnect",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,7 +24,11 @@
   },
   "homepage": "https://github.com/adcpm/steemconnect#readme",
   "dependencies": {
-    "axios": "^0.13.1"
+    "axios": "^0.13.1",
+    "bigi": "^1.4.2",
+    "bs58": "^3.0.0",
+    "crypto": "0.0.3",
+    "ecurve": "^1.0.3"
   },
   "contributors": [
     "Fabien (https://github.com/adcpm)"
