converting steemit code to normal JS

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.13.1",
     "bigi": "^1.4.2",
     "bs58": "^3.0.0",
+    "bytebuffer": "^5.0.1",
     "crypto": "0.0.3",
     "ecurve": "^1.0.3"
   },
