--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/adcpm/steemconnect#readme",
   "dependencies": {
     "debug": "^2.2.0",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.1.3"
   },
   "contributors": [
     "Fabien (https://github.com/adcpm)",
