--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify src/browser.js -o dist/steemconnect.js && uglifyjs dist/steemconnect.js -o dist/steemconnect.min.js"
+    "build": "npm run build-browser && npm run build-node",
+    "build-browser": "rm -rf dist && NODE_ENV=production webpack && gzip -k -f ./dist/*.js && du -h ./dist/*",
+    "build-node": "mkdir -p ./lib && cp ./src/* ./lib/ && babel ./src --out-dir ./lib"
   },
   "repository": {
     "type": "git",
@@ -33,8 +35,21 @@
     "KaptainKrayola (https://github.com/KaptainKrayola)"
   ],
   "devDependencies": {
-    "browserify": "^13.1.0",
+    "babel-cli": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-register": "^6.14.0",
+    "bluebird": "^3.4.6",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.1",
+    "json-loader": "^0.5.4",
     "steem": "^0.3.7",
-    "uglifyjs": "^2.4.10"
+    "webpack": "^1.13.2",
+    "webpack-visualizer-plugin": "^0.1.5"
   }
 }
