--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "env ": {
+        "browser": true,
+        "node": true,
+        "jasmine": true
+    }
 }
