--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "debug": "^2.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "js-cookie": "^2.1.3"
+    "js-cookie": "^2.1.3",
+    "qs": "^6.3.0"
   },
   "contributors": [
     "Fabien (https://github.com/adcpm)",
