--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,9 @@
         "browser": true,
         "node": true,
         "jasmine": true
+    },
+    "rules": {
+        "linebreak-style": 0,
+        "no-unused-expressions": ["error", { "allowShortCircuit": true }]
     }
 }
