--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "cross-env NODE_ENV=production && gulp build-browser && gulp build-node",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "test": "npm run lint",
+    "lint": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adcpm/sc2-sdk.git"
+    "url": "git+https://github.com/adcpm/sc2-nsdk.git"
   },
   "keywords": [
     "steem",
