--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adcpm/sc2-nsdk.git"
+    "url": "git+https://github.com/adcpm/sc2-sdk.git"
   },
   "keywords": [
     "steem",
