--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     },
     "rules": {
         "linebreak-style": 0,
-        "no-unused-expressions": ["error", { "allowShortCircuit": true }]
+        "no-unused-expressions": ["error", { "allowShortCircuit": true }],
+        "react/require-extension": "off"
     }
 }
