--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sc2-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "SteemConnect v2 SDK",
   "main": "lib/sc2.js",
   "scripts": {
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/adcpm/sc2-sdk#readme",
   "dependencies": {
-    "debug": "^2.2.0",
-    "isomorphic-fetch": "^2.2.1"
+    "cross-fetch": "^1.1.1",
+    "debug": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
