--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "homepage": "https://github.com/steemit/steemconnect-sdk#readme",
   "dependencies": {
-    "cross-fetch": "^1.1.1",
-    "debug": "^2.2.0"
+    "cross-fetch": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -38,6 +37,7 @@
     "babel-register": "^6.14.0",
     "bluebird": "^3.4.6",
     "cross-env": "^5.0.1",
+    "debug": "^4.0.1",
     "del": "^3.0.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
