--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "sc2-sdk",
+  "name": "steemconnect",
   "version": "2.0.0",
   "description": "SteemConnect JavaScript SDK",
   "homepage": "https://steemconnect.com",
   "browser": "dist/sc2.min.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/steemit/steemconnect-sdk.git"
+    "url": "https://github.com/steemit/steemconnect.js.git"
   },
   "bugs": {
-    "url": "https://github.com/steemit/steemconnect-sdk/issues"
+    "url": "https://github.com/steemit/steemconnect.js/issues"
   },
   "main": "lib/index.js",
   "files": [
