--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "cross-fetch": "^2.2.2"
+    "cross-fetch": "^2.2.2",
+    "steem-uri": "^0.1.1"
   },
   "devDependencies": {
     "@taskr/babel": "^1.1.0",
