--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.1",
   "description": "SteemConnect JavaScript SDK",
   "homepage": "https://steemconnect.com",
-  "browser": "dist/sc2.min.js",
+  "browser": "dist/steemconnect.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/steemit/steemconnect.js.git"
