--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "steemconnect",
-  "version": "3.0.0-beta.2",
-  "description": "SteemConnect JavaScript SDK",
+  "version": "3.0.0",
+  "description": "The official SteemConnect JavaScript SDK",
   "homepage": "https://steemconnect.com",
   "browser": "dist/steemconnect.min.js",
   "repository": {
